--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -9,7 +9,7 @@ on:
       version:
         description: 'Version to build'
         required: false
-        default: 'v1.0.1'
+        default: 'v1.0.0'
 
 jobs:
   build:
@@ -99,26 +99,44 @@ jobs:
           
           echo "✅ Built: ${{ matrix.artifact }}"
 
-      - name: Upload binary to release
-        uses: softprops/action-gh-release@v2
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
         with:
-          files: dist/${{ matrix.artifact }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: upid-${{ matrix.goos }}-${{ matrix.goarch }}
+          path: dist/${{ matrix.artifact }}
+          retention-days: 1
 
-  # Additional job to create a combined release summary
-  create-release-summary:
+  create-release:
+    name: Create Release and Upload Binaries
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Create release summary
+      - name: Determine version
+        id: version
         run: |
-          VERSION=${{ needs.build.outputs.version }}
-          cat > dist/RELEASE_SUMMARY.md << EOF
-          # UPID CLI $VERSION Release Summary
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            VERSION="${{ github.event.inputs.version }}"
+          else
+            VERSION="${GITHUB_REF#refs/tags/}"
+          fi
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+          echo "tag_name=${VERSION}" >> $GITHUB_OUTPUT
+
+      - name: Download all binaries
+        uses: actions/download-artifact@v4
+        with:
+          path: dist/
+
+      - name: Create release notes
+        run: |
+          VERSION=${{ steps.version.outputs.version }}
+          cat > release_notes.md << EOF
+          # UPID CLI $VERSION
           
           ## 🚀 Production-Ready Kubernetes Cost Optimization Platform
           
@@ -175,9 +193,20 @@ jobs:
           **🎯 Ready for Production Deployment and Client Testing!**
           EOF
 
-      - name: Upload release summary
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/RELEASE_SUMMARY.md
+          tag_name: ${{ steps.version.outputs.tag_name }}
+          name: UPID CLI ${{ steps.version.outputs.version }}
+          body_path: release_notes.md
+          draft: false
+          prerelease: false
+          files: |
+            dist/upid-linux-amd64
+            dist/upid-linux-arm64
+            dist/upid-darwin-amd64
+            dist/upid-darwin-arm64
+            dist/upid-windows-amd64.exe
+          generate_release_notes: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
